[package]
name = "anode-bench"
version = "0.0.0"
edition = "2021"

[lib]
bench = false

[dependencies]
anode = { version = "0.1.0", path = "../anode" }
parking_lot = { version = "0.12.1" }

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }
iai = "0.1.1"

[[bench]]
name = "cri_completable"
harness = false
