[package]
name = "anode-bench"
version = "0.0.0"
edition = "2021"

[lib]
bench = false

[dependencies]
anode = { version = "0.1.0", path = "../anode" }
parking_lot = { version = "0.12.1" }

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }
iai = "0.1.1"
rand = "0.8.5"
fastrand = "1.8.0"

[[bench]]
name = "cri_completable"
harness = false

[[bench]]
name = "cri_monitor"
harness = false

[[bench]]
name = "cri_rand"
harness = false

[[bench]]
name = "iai_rand"
harness = false

[[bench]]
name = "cri_spin_mutex"
harness = false

[[bench]]
name = "iai_spin_mutex"
harness = false

[[bench]]
name = "cri_zlock"
harness = false

[[bench]]
name = "iai_zlock"
harness = false

[[bench]]
name = "iai_completable"
harness = false

[[bench]]
name = "cri_executor"
harness = false
